--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <header class="header">
       <div class="logo">
-        <a href="inicio.html"><img src="IMAGES/logo.jpg" alt="logotipo de la marca" /></a>
+        <a href="index.html"><img src="IMAGES/logo.jpg" alt="logotipo de la marca" /></a>
       </div>
       <nav>
         <ul class="nav-links">
