--- a/paginas.html/cocktails.html
+++ b/paginas.html/cocktails.html
@@ -19,7 +19,7 @@
   <body>
     <header class="header">
       <div class="logo">
-        <a href="../inicio.html">
+        <a href="../index.html">
           <img src="../IMAGES/logo.jpg" alt="logotipo de la marca" />
         </a>
       </div>
